nueva modificacion 3er entrega

--- a/css/Style.css
+++ b/css/Style.css
@@ -2,15 +2,16 @@
     margin: 0px 5px 0px 5px;
 }
 body{
-    background-color: whitesmoke
+    background-color: whitesmoke;
+
 }
 .cabecera{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     background-color: #5D6363;
-    height: 25px;
-    margin: 0px 2px 0px 2px;
+    height: auto;
+    margin: 0px 2% 0px 2%;
     text-align: center;
     color: white;
     border-bottom: 1px solid whitesmoke;
@@ -19,11 +20,13 @@ body{
 .header{
     display: grid;
     grid-template-areas: 
-    "logo nombre nav buscar";
-    grid-template-rows: 75px;
-    grid-template-columns: 10% 15% auto 25%;
+    "logo nombre nav";
+    grid-template-rows: 60px;
+    grid-template-columns: 10% 15% 75%;
     background-color: #5D6363;
-    margin: 0px 2px 0px 2px; 
+    margin: 0px 2% 0px 2%; 
+    height: 75px;
+   
 }
 .logo{
     grid-area: logo;
@@ -45,40 +48,43 @@ body{
     margin-left: 23px;
     margin-top: 6px;
 }
+.header__section--logo{
+    display: inline-block;
+    flex-wrap: wrap;
+}
 .header__section--titulo{
     padding: 0px;
-    padding: 25px 5px 30px 10px;
-    display: flex;
+    margin: 15% 5% 1px 2%;
+    display: inline-block;
     flex-flow: row wrap;
 }
 
 .titulo__header{
-    align-self: left;
+    text-align: center;
     color:white;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .header__section--menu{
     border: 0px solid whitesmoke;
-    padding-top: 10px;
+    margin-top: 2%;
+    padding-right: 1%;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
 }
 .listaBloqueMenu{
 	display: inline-block;
-	padding-left: 20px;
-	margin: 15px 15px 15px 0px;	
+    flex-wrap: wrap;
+	padding-left: 1%;
+	margin: 5px 15px 5px 0px;	
 }
 .a{
     color: white;
     font-size: 15px;
 }
 .a:hover{
-    background-color: white;
     color: black;
     border-radius: 3px;
-    font-size: 17px;
+    font-size: 15px;
 }
 
 .FondoMenu{
@@ -87,10 +93,7 @@ body{
 	margin: 0%;
 	text-align: center
 }
-.header__section--buscador{
-    display: flex;
-    flex-flow: row wrap;
-}
+
 form{
     border: 2px solid whitesmoke;
     border-radius: 10%;
@@ -99,7 +102,9 @@ form{
 .ColBuscador{
     color: white;
 }
-
+.boost{
+    height: auto;
+}
 /* ACA COMIENZA "SOBRE NOSOTROS"*/
 
 .cuerpo{
@@ -139,8 +144,8 @@ form{
     transition: 1.5s;
 }
 .imagenHistoria{
-    width: 90px;
-    height: 80px;
+    width: 130px;
+    height: 120px;
     margin: 10px 0px 0px 140px;
     border: 1px solid black;
     border-radius: 10%;
@@ -210,18 +215,30 @@ form{
     margin-top: 20px;
     text-align: left;
 }
+.noticias{
+    background-color: rgb(235, 189, 106);
+    margin-top: 5px;
+    border-radius: 10px;
+}
+.noticias__2{
+    background-color: rgb(158, 126, 67);
+    margin-top: 5px;
+    border-radius: 10px;
+}
 .Párrafo{
 	text-align: justify;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 20px;
     padding: 10px;
 }
+
+
 /* ACA COMIENZA EL FOOTER*/
 .footer{
-    margin: 300px 2px 0px 2px;
+    margin: 200px 0px 0px 2px;
 }
 .footer--envíos{
-    margin: 460px 2px 0px 2px;
+    margin: 250px 2px 0px 2px;
 }
 .footer--contacto{
     margin: 460px 2px 0px 2px;
@@ -229,7 +246,7 @@ form{
 .section{
     display: flex;
     flex-flow: row wrap;
-    height: 100px;
+    height: auto;
     background-color: rgb(177, 124, 56);
     justify-content: space-around;
     margin-bottom: 0px;
@@ -331,6 +348,7 @@ span{
     margin: 10px 50px 0px 50px;
     background-image: linear-gradient(to bottom, rgb(212, 149, 66),#B5AC9A);
 }
+
 
 /*ACA COMIENZA "PRODUCTOS"*/
 
@@ -449,16 +467,11 @@ span{
         justify-content: center;
     }
     .header{
-        display: grid;
-        grid-template-areas: 
-        "logo nombre"
-        "buscar"
-        "nav";
-        grid-template-rows: 50% 50%;
-        grid-template-columns: auto;
+        display: flex
+        flex-flow: wrap
         background-color: #5D6363;
-        justify-content: center
-        ;
+        justify-content: center;
+        height: auto;
     }
     .logo{
         grid-area: logo;
@@ -468,9 +481,6 @@ span{
     }
     .nav{
         grid-area: nav;
-    }
-    .buscar{
-        grid-area: buscar;
     }
     .section{
         display: block;
